# quectel_lk

./: README.md  makefile
app/aboot/: aboot.c  fastboot.c  fotainfo.c  fotainfo.h  recovery.c  recovery.h  rules.mk
dev/pmic/pm8x41/: pm8x41_regulator.c
dev/pmic/pm8x41/include/: pm8x41_regulator.h
include/: Makefile.am  configure.ac  ql_branch_config.h  ql_custom_config.h  ql_funcs_config.h  ql_leagcy_config.h  ql_openlinux_config.h  ql_product_config.h  quectel-buildconfig-gen.h  quectel-features-config.h
include/dev/: flash.h
lib/fs/ff12b/: ff.c  ffconf.h  rules.mk
lib/openssl/crypto/asn1/: a_int.c
platform/fsm9010/: rules.mk
platform/fsm9900/: rules.mk
platform/mdm9607/: acpuclock.c  mdm9607-clock.c
platform/mdm9607/include/platform/: iomap.h
platform/msm_shared/: boot_verifier.c  crc32.c  dev_tree.c  mmc_wrapper.c  nand.c  qpic_nand.c  rules.mk  scm.c  sdhci.c  smem.h
platform/msm_shared/include/: boot_verifier.h  gpio.h  regulator.h
project/: mdm9607.mk
