library_includedir = $(pkgincludedir)
library_include_HEADERS = quectel-buildconfig-gen.h \
                          quectel-features-config.h \
                          ql_custom_config.h  \
                          ql_product_config.h \
                          ql_funcs_config.h \
                          ql_branch_config.h \
                          ql_leagcy_config.h

library_includedir = $(pkgincludedir)