AC_PREREQ(2.61)
AC_INIT([quectel-features-config], 1.0.0)
AM_INIT_AUTOMAKE([foreign])
AM_MAINTAINER_MODE
AC_CONFIG_SRCDIR([quectel-buildconfig-gen.h])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
#AC_PROG_CC
#AM_PROG_CC_C_O
#AC_PROG_LIBTOOL
#AC_PROG_AWK
#AC_PROG_CPP
#AC_PROG_CXX
#AC_PROG_INSTALL
#AC_PROG_LN_S
#AC_PROG_MAKE_SET
#PKG_PROG_PKG_CONFIG

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
